Compiling using new PlatformIO core

--- a/arch/stm32/stm32wl5e.ini
+++ b/arch/stm32/stm32wl5e.ini
@@ -8,6 +8,7 @@ build_flags =
   ${arduino_base.build_flags}
   -Isrc/platform/stm32wl -g
   -DHAL_SUBGHZ_MODULE_ENABLED
+  -I"${platformio.packages_dir}/framework-arduinoststm32/libraries/SubGhz/src"
 build_src_filter = 
   ${arduino_base.build_src_filter} -<platform/esp32/> -<nimble/> -<mesh/wifi/> -<mesh/http/> -<modules/esp32> -<mesh/eth/> -<mqtt/> -<graphics> -<input> -<buzz> -<modules/Telemetry> -<platform/nrf52> -<platform/portduino> -<platform/rp2040>
 lib_deps =
